added student component for preparing the 2nd iteration

--- a/Front/src/app/containers/default-layout/default-layout.component.html
+++ b/Front/src/app/containers/default-layout/default-layout.component.html
@@ -25,6 +25,7 @@
     <c-sidebar-nav *ngIf="userRole === UserRoleConstants.STUDENT" [navItems]="studentNavItems" dropdownMode="close"/>
 
     <c-sidebar-nav *ngIf="userRole === UserRoleConstants.STAFF" [navItems]="staffNavItems" dropdownMode="close"/>
+    <c-sidebar-nav *ngIf="userRole === UserRoleConstants.SECRETARY" [navItems]="staffNavItems" dropdownMode="close"/>
   </ng-scrollbar>
   <c-sidebar-toggler
     *ngIf="!sidebar.narrow"
