--- a/Front/src/app/containers/default-layout/default-layout.component.html
+++ b/Front/src/app/containers/default-layout/default-layout.component.html
@@ -43,9 +43,9 @@
   <div class="body flex-grow-1 px-3">
 
     <c-container breakpoint="lg" class="h-auto">
-      <router-outlet/>
+      <router-outlet></router-outlet>
     </c-container>
   </div>
   <!--app footer-->
-  <app-default-footer/>
+  <app-default-footer class="mt-3"/>
 </div>
