--- a/Front/src/app/features/screens/student/student-dashboard/student-dashboard.component.html
+++ b/Front/src/app/features/screens/student/student-dashboard/student-dashboard.component.html
@@ -1,14 +1,13 @@
 <app-widgets-dropdown></app-widgets-dropdown>
 
-
-<div class=" container-fluid">
+<div class=" container" style="width: 100%;">
   <div class="card">
     <div class="card-header">
       <h5>Echeances des Requetes</h5>
     </div>
-    <div class="card-body">
+    <div class="card-body" >
       <div class="table-responsive">
-        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+        <table class="table table-striped table-hover" id="tableExport">
           <thead>
           <tr>
             <th>#</th>
