--- a/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
+++ b/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
@@ -1,1 +1,35 @@
-<p>show-request-student works!</p>
+<hr><br>
+<div class=" container-fluid">
+  <div class="card">
+    <div class="card-header"><br>
+      <h5>Detail de votre requête</h5><br>
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+          <thead>
+          <tr>
+            <th>Date transmission</th>
+            <th>Recepteur</th>
+            <th>Heure de traitement</th>
+            <th>Etat de traitement</th>
+            <th>Expediteur</th>
+            <th>Destinataire</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>2024/01/05</td>
+            <td>2024/01/09</td>
+            <td>11H23</td>
+            <td>Traitement</td>
+            <td>Etudiant</td>
+            <td>Secretaire</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
