added delete request functionnality and updated request state

--- a/Front/src/app/containers/default-layout/default-layout.component.html
+++ b/Front/src/app/containers/default-layout/default-layout.component.html
@@ -24,7 +24,7 @@
   <ng-scrollbar pointerEventsMethod="scrollbar">
     <c-sidebar-nav *ngIf="userRole === UserRoleConstants.STUDENT" [navItems]="studentNavItems" dropdownMode="close"/>
     <c-sidebar-nav *ngIf="userRole === UserRoleConstants.STAFF" [navItems]="staffNavItems" dropdownMode="close"/>
-    <c-sidebar-nav *ngIf="userRole === UserRoleConstants.SECRETARY" [navItems]="staffNavItems" dropdownMode="close"/>
+    <c-sidebar-nav *ngIf="userRole === UserRoleConstants.SECRETARY" [navItems]="secretaryNavItems" dropdownMode="close"/>
   </ng-scrollbar>
   <c-sidebar-toggler
     *ngIf="!sidebar.narrow"
