--- a/Front/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front/src/app/features/screens/student/list-request/list-request.component.html
@@ -1,72 +1,85 @@
-<ng-template #deleteRequestConfirmation>
-  <button [cModalToggle]="deleteRequestConfirmationModal.id" cButton color="danger" style="font-size: 12px;color: white;">Supprimer</button>
-  <c-modal #deleteRequestConfirmationModal backdrop="static" id="deleteRequestConfirmationModal">
-    <c-modal-header>
-      <h5 cModalTitle>Confirmation de suppression</h5>
-      <button [cModalToggle]="deleteRequestConfirmationModal.id" cButtonClose></button>
-    </c-modal-header>
-    <c-modal-body>
-      Êtes-vous sûr de vouloir supprimer cette requête ?
-    </c-modal-body>
-    <c-modal-footer>
-      <button [cModalToggle]="deleteRequestConfirmationModal.id" cButton color="secondary" style="font-size: 12px;">
-        Annuler
-      </button>
-      <button cButton color="danger" (click)="console.log('suppression reussie')" style="font-size: 12px;">Supprimer</button>
-    </c-modal-footer>
-  </c-modal>
-</ng-template>
 
-
-<div class="col-12">
-  <div class="card">
-    <div class="card-header">
-      <h5>liste des Requetes</h5>
-    </div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
-          <thead>
-          <tr>
-            <th>Code requete</th>
-            <th>Objet</th>
-            <th>UE</th>
-            <th>Etat</th>
-            <th>Date</th>
-            <th>Details</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let request of requests;">
-            <td>{{ request.request_code }}</td>
-            <td>{{ getPatternDescriptionById(request.request_pattern_id) }}</td>
-            <td>{{ request.ues[0].code_ue }}</td>
-            <td>
-              <div [ngClass]="{
+<c-alert [(visible)]="visible"
+         [dismissible]="dismissible"
+         color="danger"
+         fade
+         *ngIf="visible">
+  <strong>{{ errorMessage }}</strong>
+</c-alert>
+<c-alert [(visible)]="successVisible"
+         [dismissible]=true
+         color="success"
+         fade
+         *ngIf="successVisible">
+  <strong>Requête supprimée avec succès</strong>
+</c-alert>
+<div class="card">
+  <div class="card-header">
+    <h5>liste des Requetes</h5>
+  </div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+        <thead>
+        <tr>
+          <th>Code requete</th>
+          <th>Objet</th>
+          <th>UE</th>
+          <th>Etat</th>
+          <th>Date</th>
+          <th>Details</th>
+          <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let request of requests;">
+          <td>{{ request.request_code }}</td>
+          <td>{{ getPatternDescriptionById(request.request_pattern_id) }}</td>
+          <td>{{ request.ues[0].code_ue }}</td>
+          <td>
+            <div [ngClass]="{
                   'badge': true,
                    'badge-success': request.statut === 'Accepter',
                   'badge-danger': request.statut === 'Refuser',
                   'badge-warning': request.statut === 'attente_validation',
                   'badge-info': request.statut === 'en_cours',
                 }">
-                {{ request.statut }}
-              </div>
-            </td>
-            <td>{{ request.created_at | date: 'dd/MM/yyyy' }}</td>
+              {{ request.statut }}
+            </div>
+          </td>
+          <td>{{ request.created_at | date: 'dd/MM/yyyy' }}</td>
 
-            <td>
-              <a [routerLink]="['/show-request', request.id]" class="btn btn-primary" style="font-size: 12px;">
-                Voir plus
-              </a>
-            </td>
-            <td style="display: flex; justify-content: space-between; ">
-              <button  color="danger" *ngTemplateOutlet="deleteRequestConfirmation">
-              </button>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
+          <td>
+            <a [routerLink]="['/show-request', request.id]" class="btn btn-primary" style="font-size: 12px;">
+              Voir plus
+            </a>
+          </td>
+          <td style="display: flex; justify-content: space-between;">
+            <button color="danger" *ngTemplateOutlet="deleteRequestConfirmation" (click)="deleteRequest(request.id)">
+            </button>
+          </td>
+          <ng-template #deleteRequestConfirmation>
+            <button [cModalToggle]="deleteRequestConfirmationModal.id" cButton color="danger" style="font-size: 12px;color: white;">Supprimer</button>
+            <c-modal #deleteRequestConfirmationModal backdrop="static" id="deleteRequestConfirmationModal">
+              <c-modal-header>
+                <h5 cModalTitle>Confirmation de suppression</h5>
+                <button [cModalToggle]="deleteRequestConfirmationModal.id" cButtonClose></button>
+              </c-modal-header>
+              <c-modal-body>
+                Êtes-vous sûr de vouloir supprimer cette requête ?
+              </c-modal-body>
+              <c-modal-footer>
+                <button [cModalToggle]="deleteRequestConfirmationModal.id" cButton color="secondary" style="font-size: 12px;">
+                  Annuler
+                </button>
+                <button cButton color="danger" (click)="deleteRequest(request.id)" style="font-size: 12px;">Supprimer</button>
+              </c-modal-footer>
+            </c-modal>
+          </ng-template>
+
+        </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
