--- a/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -38,7 +38,7 @@
                 <h1 data-aos="fade-up" data-aos-delay="200">Explorez Nous</h1>
                 <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grâce à EasyRequest</h1>
                 <p data-aos="fade-up" data-aos-delay="300">Du problème à la solution, une requête à la fois.</p><br>
-                <a routerLink="/login" class="btn btn-primary pills" style="background-color: rgb(97, 119, 227); border: none; padding: 15px 22px;">
+                <a routerLink="/login" data-aos-delay="200" data-aos="fade-up"  class="btn btn-primary pills" style="background-color: rgb(97, 119, 227); border: none; padding: 15px 22px;">
                   <i class="material-icons" style="font-size: 24px; vertical-align: middle; margin-right: 10px;">exit_to_app</i>
                   <span style="font-size: 18px; vertical-align: middle;">Se connecter</span>
                 </a>
