--- a/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -29,16 +29,19 @@
   </header>
 
   <div class="intro-section" id="home-section">
-    <div class="slide-1" style="background-image: url('../../../assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
+    <div class="slide-1"
+         style="background-image: url('../../../assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
       <div class="container" style="max-width: 800px; padding: 0;">
         <div class="row align-items-center">
           <div class="col-12">
             <div class="row align-items-center">
               <div class="col-lg-12 text-center mb-4">
                 <h1 data-aos="fade-up" data-aos-delay="200">Explorez Nous</h1>
-                <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grâce à EasyRequest</h1>
+                <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grâce à
+                  EasyRequest</h1>
                 <p data-aos="fade-up" data-aos-delay="300">Du problème à la solution, une requête à la fois.</p><br>
-                <a routerLink="/login" data-aos-delay="200" data-aos="fade-up"  class="btn btn-primary pills" style="background-color: rgb(97, 119, 227); border: none; padding: 15px 22px;">
+                <a routerLink="/login" data-aos-delay="200" data-aos="fade-up" class="btn btn-primary pills"
+                   style="background-color: rgb(97, 119, 227); border: none; padding: 15px 22px;">
                   <i class="material-icons" style="font-size: 24px; vertical-align: middle; margin-right: 10px;">exit_to_app</i>
                   <span style="font-size: 18px; vertical-align: middle;">Se connecter</span>
                 </a>
@@ -86,7 +89,7 @@
           </p>
           <div class="d-flex align-items-center custom-icon-wrap">
             <span class="custom-icon-inner mr-3"
-              ><span class="icon icon-university"></span
+            ><span class="icon icon-university"></span
             ></span>
             <div><h3 class="m-0">universite de yaounde I</h3></div>
           </div>
@@ -112,7 +115,7 @@
           </p>
           <div class="d-flex align-items-center custom-icon-wrap">
             <span class="custom-icon-inner mr-3"
-              ><span class="icon icon-university"></span
+            ><span class="icon icon-university"></span
             ></span>
             <div><h3 class="m-0">universite de yaounde I</h3></div>
           </div>
@@ -124,7 +127,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h3 >A propos de EasyRequest</h3>
+          <h3>A propos de EasyRequest</h3>
           <p style="color: gray;">
             EasyRequest simplifie la gestion des demandes étudiantes à
             travers une plateforme conviviale. Suivez, priorisez et résolvez
