--- a/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
@@ -5,7 +5,7 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h4>Requetes non valides</h4>
+                <h4>Requetes recus</h4>
               </div>
               <div class="card-body">
                 <div class="table-responsive">
@@ -45,5 +45,5 @@
       </div>
     </section>
   </section>
-  
-  
+
+
