--- a/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
@@ -23,7 +23,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                     <!-- <tr *ngFor="let request of requests; let i = index">
+                    <tr *ngFor="let request of requests; let i = index">
                       <td>{{ i + 1 }}</td>
                       <td>Individuelle</td>
                       <td>{{ request.title }}</td>
@@ -34,7 +34,7 @@
                       <td>
                         <button cButton class="me-1" color="primary" (click)="showRequest(request.id)" style="font-size: 12px;">Details</button>
                       </td>
-                    </tr> -->
+                    </tr>
                     </tbody>
                   </table>
                 </div>
