added request road

--- a/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
@@ -1,85 +1,86 @@
 <div class="invoice">
-    <div class="invoice-print">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="invoice-title">
-            <h4 style="font-weight: bold;">Traiter la Requête</h4>
-            <div class="invoice-number">#Detail</div>
+  <div class="invoice-print">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="invoice-title">
+          <h4 style="font-weight: bold;">Traiter la Requête</h4>
+          <div class="invoice-number">#Detail</div>
+        </div>
+        <hr/>
+        <div class="table-responsive">
+          <table class="table table-striped table-hover table-md">
+            <tr>
+              <th>Nom de l'etudiant</th>
+              <th>Matricule</th>
+              <th>Motif</th>
+              <th>date de soumission</th>
+            </tr>
+            <tr>
+              <td>{{ userData?.nom }}</td>
+              <td>{{ userData?.matricule }}</td>
+              <td>{{ getPatternDescriptionById(request.request_pattern_id) }}</td>
+              <td>{{ request.created_at | dateFormat }}</td>
+            </tr>
+          </table>
+        </div>
+        <br/><br/>
+        <div class="row">
+          <div class="col-md-6">
+            <address>
+              <strong>{{ userData?.nom }}</strong><br/>
+              {{ userData?.matricule }},<br>
+              ICT4D<br/>
+            </address>
           </div>
-          <hr/>
-          <div class="table-responsive">
-            <table class="table table-striped table-hover table-md">
-              <tr>
-                <!-- <th>Nom de l'etudiant</th>
-                <th>Matricule</th> -->
-                <th>Motif</th>
-                <th>date de soumission</th>
-              </tr>
-              <tr>
-                <!-- <td>{{ userData?.nom }}</td>
-                <td>{{ userData?.matricule }}</td> -->
-                <td></td>
-                <td></td>
-              </tr>
-            </table>
-          </div>
-          <br/><br/>
-          <div class="row">
-            <div class="col-md-6">
-              <!-- <address>
-                <strong>{{ userData?.nom }}</strong><br/>
-                {{ userData?.matricule }},<br>
-                ICT4D<br/>
-              </address> -->
-            </div>
-            <div class="col-md-6 text-md-right">
-              <address>
-                <strong>Order Date:</strong><br/>
-                Yaounde le ....<br/><br/>
-              </address>
-            </div>
+          <div class="col-md-6 text-md-right">
+            <address>
+              <strong>Order Date:</strong><br/>
+              Yaounde le {{ request.created_at | date: 'dd/MM/yyyy' }}<br/><br/>
+            </address>
           </div>
         </div>
       </div>
     </div>
-    <div class="row mt-4">
-      <div class="col-md-12">
-        <p class="section-lead"><span
-          style="font-weight: bold;">Objet et commentaire de la requête :</span> ...</p><br>
-        <p class="section-lead"><span style="font-weight: bold;">Intitulé : </span> ... <br></p>
-        <div class="row mt-4">
-          <div class="col-lg-8">
-            <h6 style="font-weight: bold;">Pièces jointes</h6><br>
-            <!-- <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments">
-              <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index">
-                <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top"
-                        title="Voir la piece jointe.">
-                  <a [href]="getAttachmentUrl(attachment.file_path)" target="_blank"
-                     style="color: white;text-decoration: none; ">Pièce {{ i + 1 }}</a>
-                </button>
-              </p>
-            </ng-container>  -->
-            <ng-template #noAttachments>
-              <p class="section-lead">Aucune pièce jointe disponible.</p>
-            </ng-template>
-          </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-md-12">
+      <p class="section-lead"><span
+        style="font-weight: bold;">Objet  :</span> {{ getPatternDescriptionById(request?.request_pattern_id) }}</p><br>
+      <p class="section-lead"><span style="font-weight: bold;">Intitulé : </span> {{ request?.title }} <br></p>
+      <p class="section-lead"><span style="font-weight: bold;">Contenu : </span> {{ request?.content }} <br></p>
+      <div class="row mt-4">
+        <div class="col-lg-8">
+          <h6 style="font-weight: bold;">Pièces jointes</h6><br>
+          <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments">
+            <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index">
+              <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top"
+                      title="Voir la piece jointe.">
+                <a [href]="getAttachmentUrl(attachment.file_path)" target="_blank"
+                   style="color: white;text-decoration: none; ">Pièce {{ i + 1 }}</a>
+              </button>
+            </p>
+          </ng-container>
+
+
+          <ng-template #noAttachments>
+            <p class="section-lead">Aucune pièce jointe disponible.</p>
+          </ng-template>
         </div>
-        <br>
-  
-        <div class="float-lg-left mb-lg-0 mb-3">
-          <div  class="alert alert-success">
-            Votre Traitement a éte effectué avec succes
-          </div>
-          <button class="btn btn-success"  style="font-size: 12px;">
+      </div>
+      <br>
+
+      <div class="float-lg-left mb-lg-0 mb-3">
+        <div *ngIf="visible" class="alert alert-success">
+          Votre Traitement a éte effectué avec succes
+        </div>
+          <button class="btn btn-success" (click)="transferingRequest()" style="font-size: 12px;">
            Transferer
           </button>&nbsp;&nbsp;
-          <button class="btn btn-danger" style="font-size: 12px;">
+          <button class="btn btn-danger" (click)="rejectRequest()" style="font-size: 12px;">
             Rejeter
           </button>
         </div>
-  
       </div>
     </div>
   </div>
   <hr/>
-  
