--- a/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
+++ b/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
@@ -1,35 +1,47 @@
-<hr><br>
-<div class=" container-fluid">
-  <div class="card">
-    <div class="card-header"><br>
-      <h5>Detail de votre requête</h5><br>
-    </div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
-          <thead>
-          <tr>
-            <th>Date transmission</th>
-            <th>Recepteur</th>
-            <th>Heure de traitement</th>
-            <th>Etat de traitement</th>
-            <th>Expediteur</th>
-            <th>Destinataire</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr>
-            <td>2024/01/05</td>
-            <td>2024/01/09</td>
-            <td>11H23</td>
-            <td>Traitement</td>
-            <td>Etudiant</td>
-            <td>Secretaire</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
+<div class="card">
+  <div class="card-header"><br>
+    <h5>Detail de votre requête</h5><br>
+  </div>
+  <!-- your-component.component.html -->
+
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+        <thead>
+        <tr>
+          <th>Expediteur</th>
+          <th>Date transmission</th>
+          <th>Traite par</th>
+          <th>Heure de traitement</th>
+          <th>Etat de traitement</th>
+          <th>Commentaire</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let entry of historyResponse">
+
+          <td>{{ student.name }}</td>
+          <td>{{ entry.created_at | date:'yyyy/MM/dd' }}</td>
+          <td>john doe - dpt infos</td>
+          <td>{{ entry.created_at | date:'hh:mm a' }}</td>
+          <td>
+            <div [ngClass]="{
+              'badge': true,
+              'badge-success': entry.status === 'accepter',
+              'badge-danger': entry.status === 'refuser',
+              'badge-warning': entry.status === 'attente_validation',
+              'badge-info': entry.status === 'en_cours',
+              'badge-primary': entry.status === 'attente_soumission',
+              'badge-error': entry.status === 'terminer',
+            }">
+              {{ entry.status }}
+            </div>
+          </td>
+          <td>eque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</td>
+        </tr>
+        </tbody>
+      </table>
     </div>
   </div>
-</div>
 
+</div>
