--- a/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
@@ -12,8 +12,7 @@
                   <table class="table table-striped table-hover" id="tableExport" style="width: 100%">
                     <thead>
                     <tr>
-                      <th>#</th>
-                      <th>Type</th>
+                      <th>Code</th> 
                       <th>Motif</th>
                       <th>Intitule</th>
                       <th>Matricule</th>
@@ -25,7 +24,6 @@
                     <tbody>
                     <tr *ngFor="let request of requests; let i = index">
                       <td>{{ i + 1 }}</td>
-                      <td>Individuelle</td>
                       <td>{{ request.title }}</td>
                       <td>{{ request.content.substring(0 , 8) }} .....</td>
                       <td>{{ request.sender.matricule }}</td>
