--- a/Front/src/app/features/screens/student/student-dashboard/student-dashboard.component.html
+++ b/Front/src/app/features/screens/student/student-dashboard/student-dashboard.component.html
@@ -4,7 +4,7 @@
   <div class="card-header">
     <h5>Echeances des Requetes</h5>
   </div>
-  <div class="card-body" >
+  <div class="card-body">
     <div class="table-responsive">
       <table class="table table-striped table-hover" id="tableExport">
         <thead>
@@ -12,49 +12,25 @@
           <th>#</th>
           <th>UE</th>
           <th>Enseignant</th>
-          <th>Date d'envois</th>
+          <th>Delai d'envois</th>
           <th>Etat du Delai</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <td>1</td>
-          <td>ICT302</td>
-          <td>Mr Fomekong</td>
-          <td>19-04-2023</td>
+        <tr *ngFor="let course of courses; let i = index">
+          <td>{{ i + 1 }}</td>
+          <td>{{ course.code_ue }}</td>
+          <td>{{ course.staff.name }}</td>
+          <td>{{ course.request_deadline | date: 'dd-MM-yyyy' }}</td>
           <td>
-            <div class="badge badge-success">En cours</div>
-          </td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>ICT302</td>
-          <td>Mr Fomekong</td>
-          <td>19-04-2023</td>
-          <td>
-            <div class="badge badge-success">En cours</div>
-          </td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>ICT302</td>
-          <td>Mr Fomekong</td>
-          <td>19-04-2023</td>
-          <td>
-            <div class="badge badge-danger">Terminer</div>
-          </td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>ICT302</td>
-          <td>Mr Fomekong</td>
-          <td>19-04-2023</td>
-          <td>
-            <div class="badge badge-danger">Terminer</div>
+            <div [ngClass]="getStatusBadgeClass(course.publication_date!, course.request_deadline!)">
+              {{ getStatusLabel(course.publication_date!, course.request_deadline!) }}
+            </div>
           </td>
         </tr>
         </tbody>
       </table>
     </div>
   </div>
+
 </div>
